# UniAudio2

./: multi_task_inference.py  pyproject.toml  readme.md  test.sh
ReasoningCodec/: infer.py  infer.sh
ReasoningCodec/models/: AudioDiffusion1D.py
evaluation/: asr_task.py  audio_music_caption_task.py  audio_understanding.py  audiogen_task.py  insturct_tts_task.py  lyric_asr_task.py  musicgen_task.py  songen_task.py  speech_edit_ss.py  speech_s2s.py  speech_s2t.py  text_llama.py  text_llm.py  text_mllm.py  text_mllm_qa.py  tts_task.py
llm_models/: config.py  lit_model.py  mllm_model.py  model_new.py
llm_utils/: arguments.py  convert_ckpt.py  dataloader_text_audio.py  sampling.py  task_definition.py  train_utils.py
metrics/audiogen_tools/: clap_score.py  fad_kl.py
metrics/tts-eval/: cal_sim.sh  cal_wer.sh  calculate_avg_similarity.py  cn_tn.py  compute_sim.py  compute_wer_from_audio.py  get_wer_libri.sh
metrics/tts-eval/whisper_normalizer/: basic.py
metrics/wer_tools/: __init__.py  get_merge.py  get_wer.py  get_wer.sh  get_wer_cn.py  get_wer_cn.sh  ifeval.py  wer.py
metrics/wer_tools/whisper_normalizer/: english.py
prompts/: audio_tasks_prompts.json
tools/tokenizer/: common.py
tools/tokenizer/AudioPromptTokenizer/: audio_prompt_tokenizer.py
tools/tokenizer/MimiCodec/: mimi_config.yaml  mimi_tokenizer.py
tools/tokenizer/ReasoningCodec_film/: codec_infer_config.yaml  decode_wav.py  infer_config.yaml  reason_tokenizer.py  reason_tokenizer_empty.py
tools/tokenizer/ReasoningCodec_film/models/: AudioDiffusion1D.py  PretrainedModel.py  abs_model.py  attention.py  model_config.json  model_utils.py  modeling_whisper.py  processor.py  scalar24k.py  semantic_decoder.py  transformer_1d_flow.py
tools/tokenizer/ReasoningCodec_film/modules/: blocks.py  transformer.py
tools/tokenizer/ReasoningCodec_film/modules/our_MERT_BESTRQ/: test.py
tools/tokenizer/ReasoningCodec_film/prompts/: test_prompt.json  train_prompt.json
tools/tokenizer/Text2ID/: text_tokenizer.py
tools/tokenizer/Text2ID/llama3_2_tokenizer/: special_tokens_map.json  tokenizer_config.json
(+24 files in other folders)
